// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab styles should render with default styles 1`] = `
.circuit-0 {
  display: inline-block;
  text-align: center;
  padding: 12px 32px;
  color: #9DA7B1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  white-space: nowrap;
  height: 100%;
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
}

<div
  className="circuit-0 circuit-1"
>
  content
</div>
`;

exports[`Tab styles should render with selected styles 1`] = `
.circuit-0 {
  display: inline-block;
  text-align: center;
  padding: 12px 32px;
  color: #9DA7B1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  white-space: nowrap;
  height: 100%;
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  color: initial !important;
  position: relative;
}

.circuit-0::after {
  content: ' ';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 4px;
  background: #3388FF;
}

<div
  className="circuit-0 circuit-1"
  selected={true}
>
  content
</div>
`;
